syntax = "proto3";

package protobuf;

option java_package = "sample.cluster.serialization.protobuf";

message TransformationJobMessage {
   string text = 1;
}